Add finalizeaccount creation api endpoint
